--- a/Jamoma/modules/audio/noise~/jmod.noise~.html
+++ b/Jamoma/modules/audio/noise~/jmod.noise~.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=ISO-8859-1">
-<title> jmod.limiter~ </title>
+<title> jmod.noise~ </title>
 <style type="text/css">
 body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 24px;	font-weight:100;	padding-top: 1em;	margin: 0;}h2 {	font-size: 18px;	font-weight:200;	margin: 0;	color: #555;	text-transform: lowercase;}h3 {	color: #888;	border-bottom: 1px solid #333;	font-size: 18px;	font-weight:100;	margin-top: 20px;	margin-bottom: 10px;	margin-left: 2%;	margin-right: 2%;}h4{	color: #333;	font-size: 14px;	font-weight: bold;	margin-bottom: 0px;	margin-left: 2%;	margin-right: 2%;}h6 {	font-size: 12px;	font-weight:100;	line-height: 1.2;	margin-right: 2%;	margin-left: 2%;}p {	font-size: 12px;	font-weight:100;	margin: 5px 2%;	padding-bottom: 1em;}ul{	margin-top:0;	padding-top:0;}li {	font-size: 12px;	font-weight:100;	margin-top: 0;	margin-left: 10px;	padding: 0em 0em 0.3em;}img {	padding: 10px 10px 0px 0px;}#jmod_header{	display: block;	margin: 0 0 40px 0;}#jmod_header img{	float: left;}.objectname {	font-size: 24px;	font-weight: bold;}.moduleName {	font-size: 2em;	background-color: #c5c5c5;	text-align: right;	vertical-align: top;	font-weight: bold;}.moduleDescription {	font-size: 1em;	background-color: #000000;	color: #c5c5c5;	text-align: right;	vertical-align: top;}.tableHeading2 {	background-color: #eee;	text-align: left;	vertical-align: top;	font-weight:bold;	font-size: 12px;}table {	border: 0px;	width: 96%;	margin-top: 10px;	margin-bottom: 10px;	margin-left: 2%;	font-size: 14px;}
 .instructionName {	font-family: 'Courier New', Courier, mono;	background-color: #edd;	vertical-align: top;}.instructionType {	font-family: 'Times New Roman', Times, serif;	background-color: #eee;	vertical-align: top;}.instructionDataspace {	font-family: 'Times New Roman', Times, serif;	background-color: #eed;	vertical-align: top;}.instructionRangeBounds {	font-family: 'Times New Roman', Times, serif;	background-color: #eee;	vertical-align: top;}.instructionRangeClipmode {	font-family: 'Times New Roman', Times, serif;	background-color: #eed;	vertical-align: top;}.instructionRampDrive {	font-family: 'Times New Roman', Times, serif;	background-color: #eee;	vertical-align: top;}.instructionRampFunction {	font-family: 'Times New Roman', Times, serif;	background-color: #eed;	vertical-align: top;}.instructionRepetitionsAllow {	font-family: 'Times New Roman', Times, serif;	background-color: #eee;	vertical-align: top;}.instructionDescription {	font-family: 'Times New Roman', Times, serif;	background-color: #eed;	vertical-align: top;}td {	padding-right: 5px;	padding-left: 5px;}ul {	list-style-type: disc;}.patchimage {	clear: both;}.comment {	color: #6666FF;}.smallTable {	width: 400px;	border: none;}caption {	font-size: 11px;	font-style: italic;}.filepath {	font-family: 'Courier New', Courier, mono;}.instruction {	font-family: 'Courier New', Courier, mono;}
@@ -12,8 +12,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 <body>
 	<div id="jmod_header">
 	<img src="../../../documentation/graphics/jmod.icon.mod.png" width="128" height="128">
-	<h1> jmod.limiter~ </h1>
-	<h2> A stereo limiter </h2>
+	<h1> jmod.noise~ </h1>
+	<h2> Play sine tones - square - triangle waves etc. </h2>
 	<h6><a href="../../../documentation/html/index.html">Table of Contents</a> | <a href="../modules/">Index of Modules</a> | <a href="http://jamoma.org/">Jamoma.org</a></h6>
 	</div>
 
@@ -21,8 +21,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 	<p> Module Type: <code> audio </code> <br>
 	Algorithm Type: <code> default </code> </p>
 	<p>Interface Size: <code> 1U-half </code> </p>
-	<p>Number of signal inlets: <code> 2 </ code> <br/>
-	Number of signal outlets: <code> 2 </code> </p>
+	<p>Number of signal inlets: <code> 0 </ code> <br/>
+	Number of signal outlets: <code> 1 </code> </p>
 	<h3> Parameters </h3>
 	<table>
 		<tr class="tableHeading2">
@@ -37,17 +37,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td> /description </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> audio/bypass </td>
-			<td class ="instructionType"> toggle </td>
-			<td class ="instructionRangeBounds"> 0 1 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> none </td>
-			<td class ="instructionRampFunction"> none </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> When active, this attribute bypasses the module's processing algtorithm, letting audio or video pass through unaffected </td>
-		<tr>
-		<tr>
 			<td class="instructionName"> audio/gain </td>
 			<td class ="instructionType"> float </td>
 			<td class ="instructionRangeBounds"> 0.000000 127.000000 </td>
@@ -57,17 +46,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDataspace"> gain </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
 			<td class ="instructionDescription"> Set gain (as MIDI value by default). </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> audio/mix </td>
-			<td class ="instructionType"> float </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Controls the wet/dry mix of the module's processing routine in percent. </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> audio/mute </td>
@@ -81,17 +59,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> When active, this attribute turns off the module's processing algorithm to save CPU </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> lookahead </td>
-			<td class ="instructionType"> int </td>
-			<td class ="instructionRangeBounds"> 0 256 </td>
-			<td class ="instructionRangeClipmode"> both </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> time </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> The number of samples (up to 256) to look ahead into the signal to see what is coming. </td>
-		<tr>
-		<tr>
 			<td class="instructionName"> mode </td>
 			<td class ="instructionType"> symbol </td>
 			<th class = "instructionRangeBounds"> N/A </td>
@@ -100,51 +67,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Set the function to be used for calculating the scaling. Possible values: exponential | linear </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> postamp </td>
-			<td class ="instructionType"> float </td>
-			<td class ="instructionRangeBounds"> -6.000000 48.000000 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> gain </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> The gain in dB applied to the signal after limiting.  </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> preamp </td>
-			<td class ="instructionType"> float </td>
-			<td class ="instructionRangeBounds"> -6.000000 48.000000 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> none </td>
-			<td class ="instructionDataspace"> gain </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> The gain in dB applied to the signal before limiting. </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> release </td>
-			<td class ="instructionType"> float </td>
-			<td class ="instructionRangeBounds"> 0.000000 500.000000 </td>
-			<td class ="instructionRangeClipmode"> low </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> time </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> The release time (ms). </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> threshold </td>
-			<td class ="instructionType"> float </td>
-			<td class ="instructionRangeBounds"> -48.000000 6.000000 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> gain </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> The limiter threshold (in dB below full scale). When the input signal level exceeds this threshold, it will be attenuated as necessary to keep the level below the threshold. </td>
+			<td class ="instructionDescription"> choose the noise function. </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> ui/freeze </td>
@@ -446,17 +369,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> audio/amplitude.1 </td>
-			<td class ="instructionType"> float </td>
-			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive">  </td>
-			<td class ="instructionRampFunction">  </td>
-			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> instant amplitude of the signal number #1 </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> audio/amplitude.2 </td>
 			<td class ="instructionType"> float </td>
 			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
 			<td class ="instructionRangeClipmode"> none </td>
