html files now refer to the icon in the graphics folder, we don't need the other graphics folder anymore
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5886 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Jamoma/documentation/html/index.html
+++ b/Jamoma/documentation/html/index.html
@@ -11,7 +11,7 @@
 	<body>
 	
 	<div id="jmod_header">
-	<img src="graphics/jmodular.icon.png" width="128" height="128">
+	<img src="../graphics/jmodular.icon.png" width="128" height="128">
 	<h1>jamoma</h1>
 	<h2>a modular standard for max, msp, and jitter</h2>
 	<p>&nbsp;</p>
@@ -38,8 +38,8 @@
 		<p>Jamoma is licensed as open source software under the terms of the <a href="http://www.gnu.org/licenses/lgpl.html">GNU LPGL</a>.</p>
 		
 <h3>External Sites</h3>
-		<p>Jamoma's user resources are hosted  by <a href="http://www.bek.no/">BEK</a> at <a href="http://jamoma.org/">jamoma.org</a>. </p>
-		<p>Jamoma development is hosted on SourceForge.  Visit the <a href="http://sourceforge.net/projects/jamoma/">Jamoma Project Page</a> for more information. </p>
+		<p>Jamoma's user resources are hosted by <a href="http://www.bek.no/">BEK</a> at <a href="http://jamoma.org/">jamoma.org</a>. </p>
+		<p>Visit the <a href="http://redmine.jamoma.org/">Jamoma Project Page</a> for more information. </p>
 		<p>Jamoma has received generous support from <a href="http://electrotap.com/">Electrotap</a>, who provided the initial impetus for the project. </p>
 		<p>&nbsp;</p>
 		<p></p>
