new type names : Part 2
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5904 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Jamoma/documentation/html/interface_guidelines.html
+++ b/Jamoma/documentation/html/interface_guidelines.html
@@ -246,7 +246,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> preset/read </td>
-    <td class="instructionType"> msg_symbol</td>
+    <td class="instructionType"> string</td>
     <td class="instructionRange"> n/a </td>
     <td class="instructionClipmode"> both </td>
     <td class="instructionRamp"> no </td>
@@ -256,7 +256,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> preset/recall </td>
-    <td class="instructionType"> msg_int</td>
+    <td class="instructionType"> integer</td>
     <td class="instructionRange"> default </td>
     <td class="instructionClipmode"> both </td>
     <td class="instructionRamp"> no </td>
@@ -276,7 +276,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> preset/store </td>
-    <td class="instructionType"> msg_symbol </td>
+    <td class="instructionType"> string </td>
     <td class="instructionRange"> n/a </td>
     <td class="instructionClipmode"> both </td>
     <td class="instructionRamp"> no </td>
@@ -286,7 +286,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <!-- <tr> 
     <td class="instructionName"> /set_clock </td>
-    <td class="instructionType"> msg_symbol </td>
+    <td class="instructionType"> string </td>
     <td class="instructionRange"> default </td>
     <td class="instructionClipmode"> none </td>
     <td class="instructionRamp"> no </td>
@@ -341,7 +341,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> audio/gain/midi </td>
-    <td class="instructionType"> msg_float </td>
+    <td class="instructionType"> decimal </td>
     <td class="instructionRange"> 0 158 </td>
     <td class="instructionClipmode"> both </td>
     <td class="instructionRamp"> yes </td>
@@ -350,7 +350,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> audio/mix </td>
-    <td class="instructionType"> msg_float </td>
+    <td class="instructionType"> decimal </td>
     <td class="instructionRange"> 0 100 </td>
     <td class="instructionClipmode"> none </td>
     <td class="instructionRamp"> yes </td>
@@ -370,7 +370,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> audio/sample_rate </td>
-    <td class="instructionType"> msg_int </td>
+    <td class="instructionType"> integer </td>
     <td class="instructionRange"> -2 0 </td>
     <td class="instructionClipmode"> none </td>
     <td class="instructionRamp"> no </td>
@@ -402,7 +402,7 @@ The bpatcher instanciating this module, when it's loaded into a patcher, will au
   </tr>
   <tr> 
     <td class="instructionName"> audio/gain </td>
-    <td class="instructionType"> msg_float </td>
+    <td class="instructionType"> decimal </td>
     <td class="instructionRange"> -144 0 </td>
     <td class="instructionClipmode"> none </td>
     <td class="instructionRamp"> yes </td>
