--- a/Jamoma/documentation/html/credits.html
+++ b/Jamoma/documentation/html/credits.html
@@ -23,48 +23,37 @@
 			- not to mention our tinkering with each other's code!</p>
 			
 		<h3>Core Developers</h3>
-		<p>In order of seniority on the project - oldest members first.</p>
+		<p>In order of seniority on the project - oldest members first. People currently implied in the development of Jamoma are :</p>
 		<ul>
 
 			<h4>Tim Place</h4>
-			<p>original concept, externals, modules (audio/video/control, including the mapper and oscnet modules), 
-				core structural components(especially jmod.hub and jmod.gui),
-				documentation (including the JIG), CVS/SVN/Mailing-List admin, graphical design, </p>
 			
 			<h4>Trond Lossius</h4>
-			<p>externals, modules (many of them, but especially input~, output~, limiter~, cuelist, and ambisonics modules), 
-				core structural components(especially jmod.parameter/message), documentation (including autodoc system and JIG), Wiki/Blog/Web/Mailing-List admin, 
-				and <em>lots</em> more!</p>
 			
 			<h4>Alexander Refsum Jensenius</h4>
-			<p>modules (especially the video modules and oscnet and mapper modules), documentation (including the JIG), gestural research, OpenSoundControl</p>
+
 			<h4>Pascal Baltazar </h4>
-			<p>reworking of the core components, development of end-user applications using jamoma, OSC namespace design </p>
-			
-			<h4>Dave Watson </h4>
-			<p>C-coding, documentation, etc. </p>
 			
 			<h4>Nils Peters </h4>
-			<p>Contribution to spatialisation design and the introduction of SpatDIF.  </p>	
-			</ul>	
+
+			<h4>Theo de la Hogue </h4>
+
 		<h3>Additional Contributions</h3>
 		<p>In alphabetical order...</p>
 		<ul>
 		
 			<h4>Matthew Aidekman</h4>
-			<p>Graphical widget development, ideas and prototypes for the jmod.gui component, window shader example, etc.</p>
-			
 			<h4>Jeremy Bernstein</h4>
-			<p>Assistance with abusive usage of Max's pattr system, supplying help with javascript tidbits and various feedback.</p>
+			<h4>Charles Bascou</h4>		
+			<h4>Nicolas Carriere</h4>
+			<h4>Mathieu Chamagne</h4>			
+			<h4>Nicolas Deflache</h4>
 			<h4>Jamie Bullock  </h4>
-			<p>Integra consultation, C-coding consultation, XML schema and tools forthcoming... </p>
 			<h4>Henrik Frisk </h4>
-			<p>Integra consultation, XML schema and tools forthcoming... </p>
 			<h4>Thomas Grill</h4>
-			<p>Generous assistance and guidance with porting the jmod.meter~ external to Windows. </p>
-			<h4>Bill Orcutt </h4>
-			<p>Generous donation of the source code for his widely used mkdir external, which is the basis of the jmod.mkdir external. </p>
-			</ul>
+			<h4>Julien Rabin</h4>
+			<h4>Thorolf Thuestad</h4>			
+			<h4>Dave Watson </h4>
 		
 		<h3>Third Party Software</h3>
 		<p>Other open-source packages that we are using within Jamoma...</p>
@@ -72,7 +61,7 @@
 		
 			<h4>TTBlue</h4>
 			<p>Tap.Tools Blue is the open source dsp library by Tim Place that is underlying both 
-				Tap.Tools Max (available from Electrotap) and Jamoma.</p>
+				Tap.Tools Max (available from Electrotap) and Jamoma. It has been renamed as JamomaDSP</p>
 			
 			<h4>ICST Ambisonics Library for Max</h4>
 			<p>The ICST Ambisonics Tools are a set of externals for Max/MSP for audio spatialisation and source 
