adding support section
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5928 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Jamoma/documentation/html/credits.html
+++ b/Jamoma/documentation/html/credits.html
@@ -24,7 +24,6 @@
 			
 		<h3>Core Developers</h3>
 		<p>In order of seniority on the project - oldest members first. People currently implied in the development of Jamoma are :</p>
-		<ul>
 
 			<h4>Tim Place</h4>
 			
@@ -40,7 +39,6 @@
 
 		<h3>Additional Contributions</h3>
 		<p>In alphabetical order...</p>
-		<ul>
 		
 			<h4>Matthew Aidekman</h4>
 			<h4>Jeremy Bernstein</h4>
@@ -55,9 +53,74 @@
 			<h4>Thorolf Thuestad</h4>			
 			<h4>Dave Watson </h4>
 		
+							<h3>
+								Support
+							</h3>
+							<p>
+								The development of Jamoma is supported by
+							</p>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://bek.no/">BEK - Bergen Center for Electronic Arts</a>
+
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://electrotap.com/">Electrotap</a>
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.gmea.net/">GMEA - Centre National de Creation Musicale d'Albi-Tarn</a>
+								</li>
+
+
+							<p>
+								and has received support from
+							</p>
+
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.khib.no">Bergen National Academy of the Arts</a> through the <a bitly="BITLY_PROCESSED" href="http://www.kunststipendiat.no/en">The Artistic Research Fellowships Programme</a>
+								</li>
+
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.canadacouncil.ca">Canada Council for the Arts (CCA)</a>
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.cost287.org/">COST Action Gesture Controlled Audio Systems (ConGAS)</a>
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.cost-sid.org/">COST Action Sonic Interaction Design (SID)</a>
+
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://didascalie.net/">didascalie.net</a>
+								</li>
+								<li>The French National Agency for Research through the <a bitly="BITLY_PROCESSED" href="http://www.virage-platform.org/">Virage research platform</a>
+								</li>
+								<li>
+
+									<a bitly="BITLY_PROCESSED" href="http://www.imal.org/">iMAL</a>
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.nserc-crsng.gc.ca/">Natural Sciences and Engineering Research Council of Canada (NSERC)</a>
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.nmh.no/">Norwegian Academy of Music</a>
+
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.forskningsradet.no">Norwegian Research Council</a>
+								</li>
+								<li>
+									<a bitly="BITLY_PROCESSED" href="http://www.bergen.kommune.no">The Municipailty of Bergen</a>
+								</li>
+								<li>
+
+									<a bitly="BITLY_PROCESSED" href="" http:="" www.fourms.uio.no="">University of Oslo</a>
+								</li>
+
+	
+		
 		<h3>Third Party Software</h3>
 		<p>Other open-source packages that we are using within Jamoma...</p>
-		<ul>
+
 		
 			<h4>TTBlue</h4>
 			<p>Tap.Tools Blue is the open source dsp library by Tim Place that is underlying both 
@@ -70,16 +133,16 @@
 			<h4>PCRE</h4>
 			<p>C Library for using regular expressions in the jmod.oscroute external to match wildcards and patterns.</p>
 			
-		</ul>
+
 
 		<h3>More Due Credits:</h3>
 		<p>Not to forget...</p>
-		<ul>
+
 		
 			<p>The OSC implementation of namespcae for the <a href="modules/jmod.vst~.html">VST module</a> is based on <a href="http://opensoundcontrol.org/VST">ideas</a> suggested by <i>M. Zbyszynski and A. Freed: <a href="http://www.cnmat.berkeley.edu/ICMC2005/ICMC_mzed6.html">Control of VST Plug-ins using OSC</a>. Proceedings of the ICMC 2005.</I> The interface for the module was partly inspired by the brilliant <a href="http://www.cycling74.com/products/radial">Radial</a> application.</p>
 
 			
-		</ul>
+
 		
 		<p></p>
 	</body>
