contributors in line !!
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5937 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Jamoma/documentation/html/credits.html
+++ b/Jamoma/documentation/html/credits.html
@@ -38,23 +38,10 @@
 			<h4>Theo de la Hogue </h4>
 
 		<h3>Additional Contributions</h3>
+		<p>Ideas, advices, code, modules (in particular in the UserLib), etc...</p>
 		<p>In alphabetical order...</p>
 		
-			<h4>Matthew Aidekman</h4> 
-			<h4>Charles Bascou</h4>	
-			<h4>Jeremy Bernstein</h4>
-			<h4>Jamie Bullock</h4> 		   	
-			<h4>Nicolas Carriere</h4>
-			<h4>Mathieu Chamagne</h4>			
-			<h4>Nicolas Deflache</h4>
-			<h4>Henrik Frisk </h4>
-			<h4>Thomas Grill</h4>  
-			<h4>Tristan Matthews</h4>
-			<h4>Kristian Nymoen</h4>
-			<h4>Julien Rabin</h4> 
-			<h4>Marlon Schumacher</h4>
-			<h4>Thorolf Thuestad</h4>
-			<h4>Dave Watson </h4>
+			<h4>Matthew Aidekman, Charles Bascou, Jeremy Bernstein, Jamie Bullock, Nicolas Carriere, Mathieu Chamagne, Nicolas Deflache, Henrik Frisk , Thomas Grill, Tristan Matthews, Kristian Nymoen, Julien Rabin, Marlon Schumacher, Thorolf Thuestad, Dave Watson </h4>
 		
 							<h3>
 								Support
